# build2gether-smart-home

./: .gitignore  .ignore  README.md
src-esp32s3/: CMakeLists.txt
src-esp32s3/main/: AppContext.h  AppEvent.h  ArduProfFreeRTOS.h  ButtonID.h  CMakeLists.txt  app_main.cpp
src-esp32s3/main/device/: ButtonBoot.h  LightDevice.cpp  LightDevice.h
src-esp32s3/main/inc/: ConnectivityManagerImpl.h
src-esp32s3/main/model/: LampModel.cpp  LampModel.h
src-esp32s3/main/thread/: QueueMain.cpp  QueueMain.h  TaskTcpClient.cpp  TaskTcpClient.h  ThreadPanel.cpp  ThreadPanel.h
src-nrf52840/: .gitignore  CMakeLists.txt  Kconfig  prj.conf  prj_minimal.conf  sample.yaml
src-nrf52840/src/: AppEvent.h  BleConst.h  LedConst.h  ble_task.c  ble_task.h  led_service.c  led_service.h  main.cpp  main.h
src-nrf52840/src/lib/arduprof/: ArduProf.h
src-nrf52840/src/lib/arduprof/os/zephyr/: MessageBus.h  MessageQueue.h
src-nrf52840/src/lib/arduprof/type/: Message.h
src-unihiker/: app_client_ble.py  app_context.py  app_event.py  app_gui.py  app_home.py  app_server_tcp.py  const.py  info_widget.py  lamp_esp_widget.py  lamp_nrf_widget.py  main.py  main_app.py  pyprof.py
